css/styles.css
html {
  scroll-behavior: smooth;
}

/* This is used to center-align content, but keep full background. 
.background-fill {
  background: blue;
}

.center-align-content {
  max-width: CHANGE AS NEEDED;
  margin: 0 auto;
  padding: CHANGE AS NEEDED;
} */

/* CSS Grids */

header {
  grid-area: myheader;
  background: #464343;
}
nav {
  grid-area: mynav;
}
main {
  grid-area: mymain;
}
footer {
  grid-area: myfooter;
  background: #1d2540;
}

/* Main elements */

body {
  font-family: "Commissioner", sans-serif;
  font-size: 14px;
  margin: 0;
  display: grid;
  grid-template-areas: "myheader myheader myheader" "mynav mynav mynav" "mymain mymain mymain" "myfooter myfooter myfooter";
}

header {
  margin: 0;
  padding-top: 1rem;
}

main {
  color: #fff;
  grid-template-columns: 1fr 1fr 1fr;
}

footer {
  position: relative;
  bottom: 0;
  height: auto;
  width: 100%;
  text-align: center;
  color: #fff;
}

h1 {
  font-family: "Tourney", sans-serif;
  font-weight: "italic";
  font-size: 37px;
  color: #1d2540;
  background-color: #c5d1d9;
  width: 918px;
  text-align: center;
  border-radius: 10px;
}

h2 {
  font-family: "Tourney", sans-serif;
  font-weight: "italic";
  font-size: 24px;
  color: #1d2540;
}

.maingreybackground {
  background: #464343;
  margin-right: 300px;
  margin-left: 300px;
}

/* Navigation */

.navigation-items {
  display: none;
}

.hamburger-menu {
  display: none;
}

.hamburger-menu:checked ~ nav {
  display: inline;
}

.navigation {
  display: flex;
  background: #c5d1d9;
  margin: 0;
  padding: 0;
  margin-top: 10px;
}

nav a {
  text-decoration: none;
}

nav a:hover {
  text-decoration: underline;
}

nav ul {
  padding: 0px;
}

nav li {
  display: block;
}

.active {
  font-weight: bold;
}

/* Icons */

.material-icons.md-48 {
  font-size: 48px;
}

.material-icons.md-18 {
  font-size: 18px;
}

/* Images */

.image-centered {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 190px;
}

.background-images-blackreach {
  background-image: url("../images/blackreachbackground.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.background-images-skyrim {
  background-image: url("../images/skyrimwallpaper.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.background-images-raft {
  background-image: url("../images/raftwallpaper.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.container-flex {
  display: flex;
}

.image-triplegrid {
  margin-left: auto;
  margin-right: auto;
  width: 220px;
  height: 140px;
}

.universeofgames {
  color: #fff;
}

img .background {
  width: 100%;
}

/* Searchbar */

.searchbar {
  display: inline-block;
  margin: auto;
  margin: auto;
  position: relative;
}

.pos-search {
  position: absolute;
}

.search-form {
  border-radius: 5px;
  height: 22px;
  width: 900px;
  text-align: center;
}

.button {
  border-radius: 5px;
  text-align: center;
}

